# ChubbyOrion.github.io

./: .gitignore  Dockerfile  README.md  Tables.csv  bayesian.py  index.html  project2.md  style.css
code/: Dockerfile  abstract_bayesian.py  bayesian.py  instructions.txt
code/create3_examples_ws/src/create3_examples/data_collection/: CMakeLists.txt  README.md  package.xml
code/create3_examples_ws/src/create3_examples/data_collection/include/create3_coverage/: coverage_state_machine.hpp  create3_coverage_node.hpp  rotate_node.hpp  rotate_state_machine.hpp  wall_follow_state_machine.hpp
code/create3_examples_ws/src/create3_examples/data_collection/include/create3_coverage/behaviors/: behavior.hpp  dock-behavior.hpp  drive-straight-behavior.hpp  reflex-behavior.hpp  rotate-behavior.hpp  spiral-behavior.hpp  undock-behavior.hpp  wait-behavior.hpp  wall-follow-behavior.hpp
code/create3_examples_ws/src/create3_examples/data_collection/include/irobot_create_msgs/action/detail/: drive_arc__struct.hpp
code/create3_examples_ws/src/create3_examples/data_collection/src/: create3_coverage_node.cpp  main.cpp  rotate_node.cpp  rotate_state_machine.cpp  wall_follow_state_machine.cpp
code/create3_examples_ws/src/create3_examples/data_collection/src/behaviors/: rotate-behavior.cpp  wait-behavior.cpp  wall-follow-behavior.cpp
data/: 1.txt  2.txt  3.txt  4.txt  5.txt  README.md
door_data/: .~lock.102.csv#  .~lock.8.csv#  1.5in_front_center_left  1.5in_left  14.csv  15.csv  16.csv  2.5in_front_center_left  2.5in_left  2.5in_side_left  2in_front_left  2in_side_left  3in_left  (+17 more)
(+91 files in other folders)
